--- a/src/main/site/_data/releases.yml
+++ b/src/main/site/_data/releases.yml
@@ -1,3 +1,44 @@
+- version: 4.1.0
+  date: 2024-01-17
+  tag: v4.1.0
+  issues: https://github.com/citrusframework/citrus/issues/
+  stories: https://github.com/citrusframework/citrus/issues/
+  changes:
+    - title: Easy Json response helpers
+      type: add
+      author: bbort
+    - title: Add fill form Selenium test action
+      type: add
+      author: christophd
+    - title: Add OpenAPI connector
+      id: 1083
+      type: add
+      author: christophd
+    - title: Citrus Functions documentation gaps
+      id: 1086
+      type: fix
+      author: picimako
+    - title: Kubernetes client config with auth token
+      id: 1089
+      type: fix
+      author: valisol
+    - title: XML validation add fail if no schema found attribute
+      type: update
+      author: bbort
+    - title: Fix nested jar url issue
+      id: 1094
+      type: fix
+      author: tschlat
+    - title: Fix nested jar loading with relative URL
+      type: fix
+      author: bbort
+    - title: Bump dependency versions
+      type: update
+      author: christophd
+    - title: Update TestNG to version 7.9
+      id: 1090
+      type: fix
+      author: christophd
 - version: 4.0.2
   date: 2023-11-22
   tag: v4.0.2
