--- a/src/main/site/_data/releases.yml
+++ b/src/main/site/_data/releases.yml
@@ -1,3 +1,50 @@
+- version: 4.2.0
+  date: 2024-03-25
+  tag: v4.2.0
+  issues: https://github.com/citrusframework/citrus/issues/
+  stories: https://github.com/citrusframework/citrus/issues/
+  changes:
+    - title: Update Kubernetes module
+      type: update
+      author: christophd
+    - title: Gracefully shutdown test context on error
+      id: 1122
+      type: update
+      author: bbortt
+    - title: Bump Quarkus 3.8.0
+      type: update
+      author: bbortt
+    - title: Bump Spring Integration 6.2.2
+      type: update
+      author: bbortt
+    - title: Bump Jetty 12.0.6
+      type: update
+      author: bbortt
+    - title: Bump Apache Camel 4.4.0
+      type: update
+      author: christophd
+    - title: Use static access for CustomEditorConfigurer
+      id: 1125
+      type: fix
+      author: tschlat
+    - title: Fix CitrusLifecycleHooks to not break Cucumber API
+      id: 1116
+      type: fix
+      author: christophd
+    - title: Create new test context for each Cucumber scenario
+      id: 1115
+      type: update
+      author: christophd
+    - title: Empty file resource returns true on exist
+      id: 1100
+      type: update
+      author: tschlat
+    - title: Test sharding
+      type: add
+      author: bbortt
+    - title: Make JsonTextMessageValidator ignore the order of JsonArrays
+      type: add
+      author: bbortt
 - version: 4.1.1
   date: 2024-01-25
   tag: v4.1.1
